<resources>
    <string name="app_name">SplitTheBill</string>
    <string name="member_name">Member name</string>
    <string name="total_paid">Total paid</string>
    <string name="info">ⓘ</string>
    <string name="value_paid">R$0,00</string>
    <string name="value_to_pay_or_receive">R$0,00</string>
    <string name="add_user">Add user</string>
    <string name="total">Total</string>
    <string name="concluido">Done</string>
    <string name="must_pay">Must pay</string>
    <string name="must_receive">Must receive</string>
    <string name="nothing_to_pay_or_receive">Nothing to pay or receive</string>
    <string name="per_member">Per member</string>
    <string name="name">Name</string>
    <string name="items_bought">Items bought</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="split_done">Split done!</string>
    <string name="fill_all_fields">All fields must be filled!</string>
</resources>